[package]
name = "iosev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.3.7"
glutin = { version = "=0.28.0", default-features = false, features = ["x11"] }
resource = "0.5.0"
winit = { version = "=0.26.1", default-features = false, features = ["x11"] }
